Tabsheet styled, panel styles tweaked for IE6.
svn changeset:1760 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
@@ -2,3 +2,4 @@
 @import "textfield/css/textfield.css";
 @import "select/css/select.css";
 @import "panel/css/panel.css";
+@import "tabsheet/css/tabsheet.css";
