--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/select/css/select.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/select/css/select.css
@@ -15,10 +15,12 @@
 }
 
 .i-select-select {
+	/*
 	border: 1px solid #b6b6b6;
-	border-top-color: #9d9d9d;
-	border-bottom-color: #d6d6d6;
-	border-right-color: #d6d6d6;
+	border-bottom-color: #9d9d9d;
+	border-top-color: #d6d6d6;
+	border-left-color: #d6d6d6;
+	*/
 	display: block;
 }
 
