scrolling table: ordering implemented
svn changeset:1797 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
@@ -23,15 +23,25 @@ select {
 	margin:0;
 	padding:0;
 	border:0;
-	background: yellow;
 }
 
 .iscrolltable-header table td {
 	margin:0;
 	padding:0;
 	border:0;
+	background:yellow;
 }
 
+.iscrolltable-header .headerCell {
+}
+.iscrolltable-header .headerCellAsc {
+	height:2px;
+	background: blue;
+}
+.iscrolltable-header .headerCellDesc {
+	height:2px;
+	background: cyan;
+}
 
 
 .iscrolltable-table {
