DateField calendar style client-side implemetation fully functional. DateField now doesn't require a repaint after every value change, it supposes that the client is smart enough to update the view on its own. Fixed locale loading and parsing (now supports all possible locales found from JVM).
svn changeset:1821 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
@@ -3,3 +3,4 @@
 @import "select/css/select.css";
 @import "panel/css/panel.css";
 @import "tabsheet/css/tabsheet.css";
+@import "datefield/css/datefield.css";
