--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
@@ -16,6 +16,11 @@ select {
 	margin: 0;
 }
 
+.i-disabled {
+	opacity: 0.3;
+	filter: alpha(opacity:30);
+}
+
 /* TODO move table styles to separate file */
 
 .iscrolltable-header table {
