refactoring and first steps towars column collapsing
svn changeset:1837 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
@@ -21,7 +21,15 @@ select {
 	filter: alpha(opacity:30);
 }
 
+i-contextmenu {
+	background: #fff;	
+	border: #000;
+}
+
 /* TODO move table styles to separate file */
+.iscrolltable-header {
+	
+}
 
 .iscrolltable-header table {
 	border-collapse:collapse;
