IDateField text style parsing more robust and supports more locales. Default popup-calendar style fixes. Feature-browser DateField demo now allows user to select a locale from a dropdown list. ISelect fixes and optimazations.
svn changeset:1842 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/textfield/css/textfield.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/textfield/css/textfield.css
@@ -1,4 +1,4 @@
-.i-textfield{
+.i-textfield {
 	font-size: 1.1em;
 	color: #444;
 	background: #fff url(../img/bg.png) repeat-x;
@@ -19,4 +19,10 @@
 
 .i-textfield-error {
 	background: #ff9999;
+}
+
+.i-textfield.i-readonly {
+	background: transparent;
+	color: #222;
+	border: none;
 }
