IScrollTable CSS classname conventions changed. Initial table theme.
svn changeset:1861 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
@@ -4,3 +4,4 @@
 @import "panel/css/panel.css";
 @import "tabsheet/css/tabsheet.css";
 @import "datefield/css/datefield.css";
+@import "table/css/table.css";
