Totally useless decoration added to theme.
svn changeset:1862 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
@@ -4,6 +4,14 @@ body {
 	color: #222;
 	font-size: 68.75%;
 	line-height: 1.4em;
+	padding: 0;
+	margin: 0;
+}
+
+#itmtk-ajax-window {
+	background: transparent url(../img/window-bottom-bg.png) no-repeat right bottom;
+	height: 100%;
+	padding: 0 8px;
 }
 
 input, select, textarea, button {
