Slider component serverside almost complete. ISlider implementation started (minimal support for horizontal sliding).
svn changeset:1918 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
@@ -5,3 +5,4 @@
 @import "tabsheet/css/tabsheet.css";
 @import "datefield/css/datefield.css";
 @import "table/css/table.css";
+@import "slider/css/slider.css";
