Development styles for slider.
svn changeset:1920 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/slider/css/slider.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/slider/css/slider.css
@@ -4,8 +4,11 @@
 
 .i-slider-base {
 	background: #eee;
+	height: 10px;
 }
 
 .i-slider-handle {
 	background: #ccc;
+	height: 10px;
+	overflow: hidden;
 }
