added scroll position indicator when scrolling to area with unrendered rows
svn changeset:1931 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/table/css/table.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/table/css/table.css
@@ -145,8 +145,14 @@
 	filter: alpha(opacity=50);
 }
 
-
-
+.i-table-scrollposition {
+	display: none;
+	position: absolute;
+	width: 150px;
+	padding: 4px;
+	border: 1px solid black;
+	background: yellow;
+}
 
 /* IE specific styles */
 * html .i-table-header-wrap {
