--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
@@ -6,3 +6,4 @@
 @import "datefield/css/datefield.css";
 @import "table/css/table.css";
 @import "slider/css/slider.css";
+@import "window/css/window.css";
