svn changeset:2012 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
@@ -7,3 +7,4 @@
 @import "table/css/table.css";
 @import "slider/css/slider.css";
 @import "window/css/window.css";
+@import "caption/css/caption.css";
