tree selection indication
svn changeset:2016 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
@@ -8,3 +8,5 @@
 @import "slider/css/slider.css";
 @import "window/css/window.css";
 @import "caption/css/caption.css";
+@import "tree/css/tree.css";
+
