clickable looking tree items (cursor)
svn changeset:2099 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/tree/css/tree.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/tree/css/tree.css
@@ -1,3 +1,6 @@
 .i-tree-node-selected > table > tbody > tr > td > span.gwt-TreeItem {
 	background: #ff0;
 }
+span.gwt-TreeItem {
+	cursor: pointer;
+}
