--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
@@ -9,4 +9,5 @@
 @import "window/css/window.css";
 @import "caption/css/caption.css";
 @import "tree/css/tree.css";
+@import "splitpanel/css/splitpanel.css";
 
